[package]
name = "dots"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
dirs = "5.0.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_derive = "1.0.203"
serde_yaml = "0.9.34"
